--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "global-keypress": "0.0.8",
     "iohook": "^0.1.9",
     "moment": "^2.18.1",
+    "sequelize": "^4.3.1",
     "socket.io": "^2.0.3",
-    "socket.io-client": "^2.0.3"
+    "socket.io-client": "^2.0.3",
+    "sqlite3": "^3.1.8"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
