--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/LastDreamer/telepath-logger-js#readme",
   "dependencies": {
     "active-win": "^2.0.0",
+    "babel-cli": "^6.24.1",
     "express": "^4.15.3",
     "global-keypress": "0.0.8",
     "iohook": "^0.1.9",
@@ -35,10 +36,11 @@
     "sqlite3": "^3.1.8"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
+    "babel-eslint": "^7.2.3",
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-0": "^6.24.1",
-    "webpack-dev-middleware": "^1.11.0",
-    "webpack-hot-middleware": "^2.18.2"
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb-base": "^11.2.0",
+    "eslint-plugin-import": "^2.7.0"
   }
 }
